tests/paczka1/fuzzy1/87000548.err
Error in line 6: 7aVt3tNTX4M A515 29,6
Error in line 16: iloVOafp S435 82,1
Error in line 17: 7aVt3tNTX4M S435 64,5
Error in line 22: 7aVt3tNTX4M A430 69,2
Error in line 38: enUUpd S435 98,7
